# urlxpanda

./: Cargo.toml  DEPLOYMENT.md  README.md  netlify.toml  nixpacks.toml  railway.json  render.yaml
crates/urlxpanda-cli/: Cargo.toml
crates/urlxpanda-cli/src/: main.rs
crates/urlxpanda-lib/: Cargo.toml
crates/urlxpanda-lib/src/: lib.rs
crates/urlxpanda-wasm/: Cargo.toml
crates/urlxpanda-wasm/src/: lib.rs
extension/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
web/: .gitignore  README.md  _redirects  app.js  build.sh  index.html  package.json  serve.py  site.webmanifest  styles.css
web/.netlify/functions/: expand.py
web/web/.netlify/functions/: expand.py
