[package]
name = "urlxpanda-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
regex = "1.0"
web-sys = { version = "0.3", features = [
  "console",
  "Request",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Window",
  "Headers",
  "Document",
  "Element",
  "HtmlDocument",
  "HtmlElement",
  "HtmlMetaElement",
  "HtmlLinkElement",
  "HtmlImageElement",
  "NodeList",
  "DomTokenList",
  "Url",
] }
